--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.2"
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
+    "eslint-config-next": "12.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   }
 }
